# Open_Mobile_Manipulator

./: README.md
arduino_code/to_arduino/: to_arduino.ino
costum_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
costum_arm_moveit_config/config/: fake_controllers.yaml  lynx_rover.srdf  ommp_sim.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
costum_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ommp_sim_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
extra_packages/ommp_real_moveit_config/: .setup_assistant
lynxbot_bringup/: CMakeLists.txt  package.xml
lynxbot_bringup/launch/: kinect.launch  main.launch  (+7 more)
my_arm_moveit_config/: .setup_assistant  package.xml
ommp_bringup/: CMakeLists.txt  package.xml  real_bringup.launch
ommp_packages/ommp_hardware_interface/: CMakeLists.txt  package.xml
ommp_packages/ommp_hardware_interface/config/: hardware.yaml  joint_limits.yaml
ommp_packages/ommp_hardware_interface/include/ommp_hardware_interface/: ommp_hardware.h  ommp_hardware_interface.h
ommp_packages/ommp_hardware_interface/launch/: ommp_hardware_interface.launch
ommp_packages/ommp_hardware_interface/ommp_control/src/: ommp_hw_interface.cpp
ommp_packages/ommp_hardware_interface/src/: generic_hw_interface.cpp  ommp_hardware_interface.cpp  ommp_hardware_interface_node.cpp
ommp_simulation/: CMakeLists.txt  package.xml
pcl_obj/: CMakeLists.txt  package.xml
pick_place/: CMakeLists.txt  package.xml
safe_spawner/: safe_spawner_basic.sh  safe_spawner_drive.sh  safe_spawner_ekf_test.sh  safe_spawner_exploration.sh  safe_spawner_navigation.sh  safe_spawner_object_recognition.sh  safe_spawner_patrol.sh  safe_spawner_pseudo_real.sh  safe_spawner_real.sh  safe_spawner_rtabmap_localization.sh  safe_spawner_rtabmap_mapping.sh  safe_spawner_test.sh  safe_spawner_without_map_navigation.sh
sensor_stick/: CMakeLists.txt  model2.sav
(+246 files in other folders)
